Fixed loader issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.page {
+  height: calc(100vh - 5rem);
+  width: 100%;
+  padding: 2rem;
+}
